--- a/source/dialogs/combined-plot-properties/combined-plot-properties-modal.html
+++ b/source/dialogs/combined-plot-properties/combined-plot-properties-modal.html
@@ -1,5 +1,5 @@
 <div class="modal fade" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog-lg">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()"
