curve bulk update

--- a/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
+++ b/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
@@ -8,7 +8,7 @@
             <div class="modal-body">
                 <p></p>
                 <form class='form-horizontal form-condensed'>
-                    <table class="text-on-table table table-bordered curveTable">
+                    <table class="text-on-table table table-bordered curveTable scrollTable">
                         <thead>
                             <tr>
                                 <th rowspan="2" width="5%">Use</th>
