--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -325,7 +325,7 @@
                                                 ng-click="wiModal.setClickedRowShading($index)">
                                                 <td style="width: 12%">
                                                     <ui-select ng-model="shading.rightLine"
-                                                                ng-change="wiModal.onChangeShading(shading._index); wiModal.onSelectRightLine();
+                                                                ng-change="wiModal.onChangeShading($index); wiModal.onSelectRightLine();
                                                                 wiModal.setShadingName(shading.rightLine, shading.leftLine, shading._index)">
                                                         <ui-select-match placeholder='Select a curve'>{{shading.rightLine.name}}</ui-select-match>
                                                         <ui-select-choices group-by="'datasetName'"
@@ -336,7 +336,7 @@
                                                 </td>
                                                 <td style="width: 12%">
                                                     <ui-select ng-model="shading.leftLine"
-                                                                ng-change="wiModal.onChangeShading(shading._index); wiModal.onSelectLeftLine();
+                                                                ng-change="wiModal.onChangeShading($index); wiModal.onSelectLeftLine();
                                                                 wiModal.setShadingName(shading.rightLine, shading.leftLine, shading._index)">
                                                         <ui-select-match placeholder='Select a curve'>{{shading.leftLine.name}}</ui-select-match>
                                                         <ui-select-choices group-by="'datasetName'"
