--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -57,8 +57,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-5 padding-left-2em" for="minValue">Left value</label>
                                     <div class="col-sm-7">
-                                        <input type="number" class="form-control wi-form-control"
-                                                value="" id="minValue" name="minValue"
+                                        <input type="number" class="form-control wi-form-control" id="minValue"
                                                 ng-model="wiModal.curveOptions.minValue"
                                                 ng-change="wiModal.curveOptions.autoValueScale = false"
                                                 ng-disabled="wiModal.curveOptions.autoValueScale">
