--- a/source/dialogs/combined-plot-properties/combined-plot-properties-modal.html
+++ b/source/dialogs/combined-plot-properties/combined-plot-properties-modal.html
@@ -7,7 +7,7 @@
                 </button>
                 <h4 class="modal-title">Combined Plot Properties</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="overflow-y: unset;">
                 <form class="form-horizontal" action="" name="combinedPlotProperties">
                     <div class="row">
                         <div class="col-sm-12">
