--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -32,8 +32,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-5 padding-left-2em" for="alias"><span class=""></span>Display Name</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control wi-form-control"
-                                                value="" id="alias" name="alias"
+                                        <input type="text" class="form-control wi-form-control" name="alias"
                                                 ng-model="wiModal.curveOptions.alias">
                                     </div>
                                 </div>
