--- a/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
+++ b/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Curve bulk update</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body modalScroll">
                 <p></p>
                 <form class='form-horizontal form-condensed'>
                     <table class="text-on-table table table-bordered curveTable scrollTable">
