fixed color picker: auto popup dialog when input out of range

--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -74,7 +74,7 @@
               </div>
               <button type="button" class="btn btn-default" style="display: none;" ng-click='wiModal.updateColor();'>Click</button>
             </form>
-            <p class="dialog-error" ng-if="wiModal.errorMessage">{{wiModal.errorMessage}}</p>
+            <!-- <p class="dialog-error" ng-if="wiModal.errorMessage">{{wiModal.errorMessage}}</p> -->
           </div>
           <!-- End of RGB format -->
         </div>
