--- a/source/dialogs/curve-filter/curve-filter-modal.html
+++ b/source/dialogs/curve-filter/curve-filter-modal.html
@@ -142,7 +142,7 @@
                                             </tr>
                                             <tr>
                                                 <td ng-repeat="col in wiModal.table track by $index" style="min-width:130px;">
-                                                    <input type="number" class="form-control wi-form-control" ng-model="col" step='0.0001' min='0'>
+                                                    <input type="number" class="form-control wi-form-control" ng-model="wiModal.table[$index]" step='0.0001' min='0'>
                                                 </td>
                                             </tr>
                                         </tbody>
