--- a/source/dialogs/curve-filter/curve-filter-modal.html
+++ b/source/dialogs/curve-filter/curve-filter-modal.html
@@ -112,11 +112,18 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="form-group" ng-if="wiModal.filterOp!='2'">
+                                <div class="form-group" ng-if="wiModal.filterOp!='2' && wiModal.filterOp!='4'">
                                     <label class="col-sm-5">Number of levels (must be odd):</label>
                                     <div class="col-sm-5">
                                         <input type="number" class="form-control wi-form-control" step="1" min='3'
                                         ng-model="wiModal.numLevel" ng-blur="wiModal.onNumLevelChange()">
+                                    </div>
+                                </div>
+                                <div class="form-group" ng-if="wiModal.filterOp=='4'">
+                                    <label class="col-sm-5">Number of cutoff (smaller is better):</label>
+                                    <div class="col-sm-5">
+                                        <input type="number" class="form-control wi-form-control" step="any" min='2'
+                                        ng-model="wiModal.cutoff">
                                     </div>
                                 </div>
                                 <div class="form-group" ng-if="wiModal.filterOp=='2'">
